--- a/css/design.css
+++ b/css/design.css
@@ -1,7 +1,7 @@
 body{
     background-color: rgb(63, 98, 163);
-    max-width: 100%;
-    margin: 0;
+    
+    text-align: center;
     border-radius: 1em;
     display: block;
     
