--- a/css/design.css
+++ b/css/design.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(63, 98, 163);
+    background-color: 205, 230, 244;
     
     text-align: center;
     border-radius: 1em;
