--- a/css/design.css
+++ b/css/design.css
@@ -1,5 +1,5 @@
 body{
-    background-color: 205, 230, 244;
+    background-color: rgb(205, 230, 244);
     
     text-align: center;
     border-radius: 1em;
