--- a/css/design.css
+++ b/css/design.css
@@ -1,9 +1,12 @@
 body{
     background-color: rgb(222, 238, 248);
     
-    text-align: center;
+    
     border-radius: 1em;
     display: block;
     
     
     }
+header{
+    text-align: center;
+}
