--- a/project.plan/css/design.css
+++ b/project.plan/css/design.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(222, 238, 248);
+    background-color: rgb(247, 237, 226);
     
     
     border-radius: 1em;
@@ -15,4 +15,8 @@ header{
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+}
+main{
+    display: block;
+    background-color: rgb(132, 165, 157);
 }
