--- a/project.plan/css/design.css
+++ b/project.plan/css/design.css
@@ -20,3 +20,7 @@ main{
     display: block;
     background-color: rgb(132, 165, 157);
 }
+font-family: 'Bebas Neue', cursive;
+font-family: 'Open Sans Condensed', sans-serif;
+font-family: 'Pattaya', sans-serif;
+font-family: 'Poiret One', cursive;
