--- a/project.plan/css/design.css
+++ b/project.plan/css/design.css
@@ -27,6 +27,33 @@ main{
     display: block;
     margin:4em;
 }
+.nav {
+    overflow: hidden;
+    background-color: #F28482;
+
+  }
+  
+  .nav a {
+    color: #f2f2f2;
+    text-align: center;
+    padding: 20px 25px;
+    text-decoration: none;
+    font-size: 17px;
+    float: left;
+    font-size: 25px;
+    font-family: 'Bebas Neue', cursive;
+  }
+  
+  .nav a:hover {
+    background-color: #F5CAC3;
+    color: black;
+  }
+  
+  .nav a.active {
+    background-color: #F5CAC3;
+    color: black;
+  }
+  
 
 .title-page-font{
     font-family: 'Poiret One', cursive;
